Changelog for driftnet
$Id: CHANGES,v 1.8 2002/05/27 16:59:44 chris Exp $

0.1.5

Allow user to save images by clicking on them.

Driftnet now exits more cleanly on interrupt. Various minor bug fixes.

The temporary directory used by driftnet may now be specified as a command-line
option; otherwise, it is created dynamically.

Added the -a (adjunct) and various related options to make it easy to use
driftnet as a back-end for some other program. It is now possible to compile
a back-end only version of driftnet without any X11 support by using the
NO_DISPLAY_WINDOW option at compile time.

Changed some things to make driftnet a bit more portable to non-Linux systems.

0.1.4

Minor bug fixes. Driftnet now tests for the existence of /tmp/imgdump, which
should eliminate most of my support mail....

0.1.3

Fixed serious bugs in stream capture code, and tidied up same.

Added command-line options for selecting interfaces, verbosity etc.

Made window resizing neater (it now no longer results in erasing the contents
of the window).

Added cleaner shutdown and signal handling.

Removed vestigial dependencies upon libpnm.

0.1.2

Various bug fixes.

0.1.1

CHANGES file created. Minor bugfixes (including preventing the program
from quitting when it times out waiting for a packet).
