@@ -7,7 +7,7 @@
 .\" Copyright (c) 2002 Chris Lightfoot. All rights reserved.
 .\" Email: chris@ex-parrot.com; WWW: http://www.ex-parrot.com/~chris/
 .\"
-.\" $Id: driftnet.1,v 1.5 2002/05/28 00:23:55 chris Exp $
+.\" $Id: driftnet.1,v 1.6 2002/05/28 20:19:09 chris Exp $
 .\"
 
 .SH NAME
@@ -83,9 +83,9 @@ syntax. User filter code is evaluated as `tcp and (\fIfilter code\fP)'.
 Chris Lightfoot <chris@ex-parrot.com>
 
 .SH VERSION
-\fBDriftnet\fP, version0.1.5pre1.
+\fBDriftnet\fP, version 0.1.5pre1.
 .br
-$Id: driftnet.1,v 1.5 2002/05/28 00:23:55 chris Exp $
+$Id: driftnet.1,v 1.6 2002/05/28 20:19:09 chris Exp $
 
 .SH COPYING
 This program is free software; you can redistribute it and/or modify
