@@ -6,7 +6,7 @@
 .\" Copyright (c) 2002 Chris Lightfoot. All rights reserved.
 .\" Email: chris@ex-parrot.com; WWW: http://www.ex-parrot.com/~chris/
 .\"
-.\" $Id: driftnet.1.in,v 1.1 2002/05/27 16:59:44 chris Exp $
+.\" $Id: driftnet.1.in,v 1.2 2002/05/28 20:19:09 chris Exp $
 .\"
 
 .SH NAME
@@ -82,9 +82,9 @@ syntax. User filter code is evaluated as `tcp and (\fIfilter code\fP)'.
 Chris Lightfoot <chris@ex-parrot.com>
 
 .SH VERSION
-\fBDriftnet\fP, version@@@VERSION@@@.
+\fBDriftnet\fP, version @@@VERSION@@@.
 .br
-$Id: driftnet.1.in,v 1.1 2002/05/27 16:59:44 chris Exp $
+$Id: driftnet.1.in,v 1.2 2002/05/28 20:19:09 chris Exp $
 
 .SH COPYING
 This program is free software; you can redistribute it and/or modify
